--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div id="header">
-        <p>Space Surfing</p>
-        <img id="star" src="img/star.png" alt="Star">
     </div>
-    <div id="game"></div>
+    <div>
+        <canvas id="game-canvas" width="1000" height="700"></canvas>
+    </div>
 </body>
 </html>
